--- a/2-20-21/index.html
+++ b/2-20-21/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class="header">
+    <nav class="nav">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,27 +24,34 @@
             </ul>
         </div>
     </nav>
-    <div class="hero"></div>
+    <header class="hero"></header>
     <section class="content">
         <article class="search-engine-optimization">
-            <img src="search-engine-optimization.jpg" class="float-left" alt="search engine optimization and six factors" />
+            <img src="search-engine-optimization.jpg" class="float-left"
+                alt="search engine optimization and six factors" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management" alt="online reputation">
             <img src="online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
             <img src="social-media-marketing.jpg" class="float-left" alt="social media marketing different icons" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </article>
     </section>
@@ -53,21 +60,24 @@
             <h3>Lead Generation</h3>
             <img src="lead-generation.png" alt="gear above filter above money" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>""
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
+            </p>
         </article>
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="brand-awareness.png" alt="light bulb in a suit"/>
+            <img src="brand-awareness.png" alt="light bulb in a suit" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </article>
-        <div class="benefit-cost">
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="cost-management.png" alt="coins for cost management"></img>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </article>
     </aside>
